--- a/app/src/main/res/drawable-v24/grad_back.xml
+++ b/app/src/main/res/drawable-v24/grad_back.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#F00B51"
-        android:endColor="#7366FF"
+        android:startColor="#020403"
+        android:endColor="#0d0c0a"
         android:angle="225">
     </gradient>
     <corners
-        android:topRightRadius="30dp"
-        android:bottomRightRadius="30dp">
+        android:topRightRadius="25dp"
+        android:bottomRightRadius="25dp">
     </corners>
 </shape>
