--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -59,9 +59,10 @@
         android:background="@drawable/grad_back"
         app:itemTextAppearance="@style/customTextItems"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/drawer_header"
         app:itemTextColor="#ffffff"
-        app:menu="@menu/menu_drawer">
+        app:itemIconTint="@color/white"
+        app:menu="@menu/menu_drawer"
+        app:headerLayout="@layout/drawer_header">
 
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
