--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -34,6 +34,7 @@
             tools:ignore="MissingConstraints">
 
             <Button
+                android:id="@+id/btnSignup"
                 android:layout_width="160dp"
                 android:layout_height="match_parent"
                 android:background="@color/black"
