--- a/app/src/main/res/layout/activity_notification_screen.xml
+++ b/app/src/main/res/layout/activity_notification_screen.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".notification_screen">
 
+
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -74,6 +75,7 @@
             tools:ignore="MissingConstraints" />
 
         <TextView
+            android:id="@+id/settime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="48dp"
