--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:gravity="center"
-    android:backgroundTint="bl"
+    android:backgroundTint="@color/black"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".NotificationActivity">
